[package]
name = "battleship_circuits"
authors = ["Fitznik <oshchypok.olena@gmail.com>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

franklin_crypto = { package="franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="beta", features = ["plonk"]}
rand = "0.4"
num-bigint = "0.3"

rescue_poseidon = {package = "rescue_poseidon", git = "https://github.com/matter-labs/rescue-poseidon"}
bellman_ce = {path = "bellman"}